--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         At least 2 pages.
         A Bootstrap navbar, table, and form.
         Bootstrap grid used throughout to format elements
-        Elements should stack vertically when the window is small-->
+        Elements should stack vertically when the window is small
+    As I was using Bootstrap 4.4.1, I consulted the documentation for that version:
+    https://getbootstrap.com/docs/4.4/getting-started/introduction/ -->
 
 <!DOCTYPE html>
 <html lang="en">
