fixed error I saw while starting to record video

--- a/donate.html
+++ b/donate.html
@@ -110,7 +110,7 @@
         </div>
         <!--For the text area, I reduced its size by adding the column class. I used bottom margins on it and the submit
         button to space the content out better.-->
-        <textarea class="form-control mx-2 mb-2 col-sm-3" aria-label="Enter honorary donor's name"></textarea>
+        <textarea class="form-control mb-2 col-md-3" aria-label="Enter honorary donor's name"></textarea>
         <button type="submit" class="btn btn-secondary mx-2 mb-2">Donate</button>
       </form>
 
